@@ -1,3 +1,3 @@
-var build = '201305150210';
+var build = '201305151641';
 var version = "0.5.0";
-var changelog = " - List saved event added to feed  - New tips event added to feed  - Tips like event added to feed  - New friends added to feed  - Cache update, smooth loading  - Homescreen disabled  - Api structure update ";
+var changelog = " - Liker list page added  - List saved event added to feed  - New tips event added to feed  - Tips like event added to feed  - New friends added to feed  - Cache update, smooth loading  - Homescreen disabled  - Api structure update ";
