@@ -10,7 +10,7 @@ Package: nelisquare
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libqt4-declarative, libqtm-location, libqtm-gallery
 Description: Foursquare client
- Use Nelisquare to check-in to venues and to check recent check-ins of your friends.
+ Use Nelisquare to browse nearby places, checkin to them, steal mayorships! Comment your friends activity, upload photos, leave usefull tips!
 XB-Maemo-Icon-26: iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABHNCSVQICAgIfAhkiAAAAAlwSFlzAAALEgAACxIB0t1+/AAAEx9JREFUeJzlmnmcFdWVx7+3qt57/V7v0E2zNJvsggGBYBYkYqIYNRgyA2bGyYhZ3JIZEg0qUcfEMYnKSJIxMklmTNCYzyTAqMSYqEHFqEmUVQS7gWaTnab35S1V9978UfXqVb1+DS1qRj85Hx79+ta5557zu+ece+6phr9xEu+G0MVbjlxaGhELLcMoS5hiDEBFxBzxVmS02nIfQLfUuxyl2jtsvWLplEG/ead1PW0Abtx0+IPFUXF1dTTyqZKIUdMtFRmlSUtNRmnUO6klYABRQxAzBVFDkDANOm11rDFjP9GV0T+5b+rg9acj97QAWLzlyOcnlMcedJQmKTXdUpFW+nREnTbFPBDipsAyBHVt6S8snTLop29VzlsCYPGWg58fGI/eVh4xR55IS5Lynd7n06O4aVAVM2mz5d6jycxdS6fU9hmIPgPwrW1Hnh5UFLkwKRUtGYnUf90dPxWZQlAZNYmbBkdS9jN3TBo0py/zTgnADRvevHtUafTmA51p3lsm904CGFoSY3dH5p5l04fdcireXumGDfvvPqM4enNz2qY947yjSr7bVBa16BeLsKcrc8+y6cN7BaFXABa9uu+7o0qit5xIZui031/GZ6kkYlEVj7K7M3P3D2aMWFKIp1cAvr/toG5OZd5bO38aeacsFqFfUZSvTqotaGvBwRv/3PC7dDp90XsjxwNao7UGBBqN9++kJACEQODWEEXxoqfu+9DoTxbkC9IXXnjjyjGl8RV7WzveCdXfPnmGK63QGhcIH5AsCfIhEYaBECCEQCAYWVlKQ2dq4YMfO/OhIJ+Vv151LHJ7RzqD+isXNgXJ33WFkgqlXBCyPwFEL0FsGAohDIQhMAxBZ9qmKmreDoQACE1f+MIbV45KRFa82dqFo94DAaA1GnfXpcyB4H5cBFwAhMeeGzMtC0MIDNPAEAbRiMmwimL2JJ2FKwJe4AOwYO1rU8cnohuPdnaTPJ2s31uC6m2L+jBXo123V5pMxsZxJFNqKrlj9hSf52BbF1c/+iJTh1Rz14XT/PEjHd185bevYlompmliWQaJaJSBpQnquzPTVn5i8iYIhEBC86W0lHSmM31UOGyY7iUtCZ9Ph8EIyAjPDcjWLgBSKmxbYtsOtSXxkPw9TW2kbYehZeHxvS0dOFKhhZcdBHSk01QmYiQ0XwKuCwFQZonLOlMZ1Mnq+2Am9nTNKS8CPHjGakTAaBEALWh0KKHp3NwcABLHdnBsh2EVJSGVGhrbcDIOwytKwwA0dSAdifDWVUIgtKAzlaHMsi7rAUDcYNDhZLr32Nc5ld1M7BmhRc6coGeI7FHkKiCMPI/xYljr4NwsUi5U2sv2SmkyjoPjOIyoDAOw63grjlKc0T8MwO7mdtcWLdBKgBIYGLQn0wwutwZl+XwAWrtTdKRSJzVeK+0rJR3lf9feTnnMgMgdQcI13jQNzzbhG+X+VGgFWueA9+cJ19u00qRTGWpL44yuKvf5utM263a+iRKCh16td9cEDMPgjwcbMUwDJV1dpAKlJB3SoTVi+jJ8AFIZGyllrwAoDVoplNZo5cakVjoHSl6BkgXAMAwMQ2BaZiAcXABdWdrN7t75LjwrTNP0wdRK4TgOwytKQplnX3M7GUdiGAZr6/eDAEO460VjUSzhRZMk4JGCVMbuCUBnOo0q5P6B3VdKoaRGSknCMFBCow2B1tDSncYQggk1lYwfUElpUZT9LZ1sPNhIynawlEYYuJpojeM4KAloxdjqCmaeMYiIYdCVcTja3s0zuw54RYwLg2M7nNG/LKTaruOtvs6Dy0s9r3E9oCmTQWkDoTVCKZTKAdCZTocBmPPYy3OSXZ3uLvQCgPLOYSkVjiNZe/28ENvKjTu4cMJwKhJFoV3qSGW4b91m1jYcRBiGJ1KDVMyfPJrPTh3LgNJEj5L0ognDue+5jexvcStSx5GMCrg/wM7jLV5RpFlz9adCz85d/hhCKTf3aDfMhHDBT2Zs5jz28pyn5330aQugSKvPdQXcIgyAq7DjOEipkI5E2rKHwpdPG1dwemlRlG9edA5r7m7A8I6kiqIozy2aX3g9j84ZXsPKqy5m66FG/ulnvyVhWZw7eoj/XGnNk6814DiSeDSSrzLSq2U0GtMw3KQbULo4oT4HuABopcplL9k/W3vLwO7X5J3FfSE7Y3u7AbfPO7fP884aUs3Q8hKKoxEsz4MAWrvTHGvvAiEYURk+AdqSaaRWrgd4aU3n1SFaqXLwQiCi9VipCiRAL7trrXGUdM9jKRnZL7ygVIo1WxrY1dhCW3eaYf3KuPZjU/JkKWxb87ExtZw3dpg/nLIdlq/bzKoN9fQviXPFjDP57Dln+pslgHE1lRRFwteWnceakVqBhlEDKkLPdje6uUFqCUqjhUYjQgBEtB7rA6C8Y6kgAOBn6qwXjKoKL/i7bXtZ8vgfEJ6LK6l7AKCkwnEU18yaEqwNuXHlczy1bS8Ax9q6uPXRF5g5ppah/XIJrywWZXhVOAHuPNbsu/XYAZXhZ8dbUBoMpVFCQ9a2QAhk850FEFPOWMcpUP8HPMC2HaQjcWzJxRNHhtie2NqAYXrntotYD1Gd3SlumHMOU4fV+GMrXnqd9XsOU1WSS5xKazpT4XL8QHMb158/NTS2ZvNOsmF7yQdGhZ49+XoDSkmkdF1fKYVhhD0gppycBzhKUTAHBACQSuFIScQUDAuEgAZ2Hm8GIdy6O1AxBkkpzcwxQ0NjC2eexcKZZxXgDqgA1B1poro0ERrfeawZrTX9i+NUB3KSVIqGxlYUGqEVKIEwDG9jcpplK143BLwrZr7x2R9KaZSUKKUZ2r+MqJWLx/ZkmiPtXX6Cc29wPcE0DcHEwf1DY33pye8+3sKB5vYevO3JNCAYVV2OGUiOxzq6aOlOES2K+DoJrRAqLEEFAZC9AKABVDZHuDyjqytCyuxpbMGREkuYXo2jC94MR/Qv75HI+kIv7NhPoQaYG/+acTVhUHccbUZrr0xXEiUMhOx5F5FBAGzbwXby6oCA++dygOLSSeF4e3zLTpRWSJWNN83QsvApkczYnD2sJnQzfHb7Xq748WP+XcEwc7sohPdf9tJZwKPcE0Az9+wxofFfv7YLqRVSOWgMNwwEPTzA9uqEgAfkoRww3i2D3VAYV9MvxLbDi8VsVtVKMzaPZ19TO9HABQRgQHlxbl+9NTDcm6MGhG88fgUZUk9rLMNgdN4JUH+0yQtb1wgfy7wYynqAkQOgwEcHf5eUFUUZGLiPS6XYeawpAJILZD4AdYcb6UqHPWxS7QDuuGwWQypL3euygKhpUloUpaa0mA+OHER1aQKNZmheoZNxHDSamrIE5YkifzztOOw90eqFgKe/LmxbKATcBFc4B7hh4MbUqOqKUDV2ojPFic5uhBDuzU67CXDcwHBc1h85we7jzcFeDwK4/uPTufb8aaRttwgzDDANA9MwEMC8B1ZxtK2zh7yG4y2gNRMGV4Xy0f6mNrozNobp6mNojfauw/mtOeXdfA2AjJTYTqGPW/rajsSRirkfCMfbmi07kEojtcaREikVUdNkzsQzcjji5okth45x06q1PdKZIQTxqEU8ahGzLCzP+KauJK/sOYTSmnlTw/eMRzftQAGfzht/fPNOb9ddfWypcKQqaFvGA+Ckx6BGgMr14/N3ou5Io98HwGtgjujfj5iVi/eOZJqDre0g4OE/baU8HuOmiz5C1ArnhLylefaNvW6iQzBuUE+PAs2EQVVhfY6ecCtRrRDKzQB+01if5Bh0pETl3wWyLS+VDQXFz/+8lUc31ZNNz8/V7/XCIzetNZnk66t+72fw1u6UezHB7Sbe/9yrPLqxjn+fN5uasmJilkXacdh5tImDLe3sbmzhjcMn2HGsyW+ZLn9+gx96Anh170F3fN0GYqYLpBDwyr6DuH+bInIgBE6TIDmeBwiA6Ut/pg+3tBUGQHvFkFQuGNm3M17HxxeS7Yl6jpTr0QsvpYucXJ3rJGUbJDle/D5i7tIQbL16LZJQTAsM00VBGOGWWmjtAA2uLGfD4quEBdCpqHMcOaE3ANCuy9w856Nce950DjS1URS16F8c59pHnuSZ7XvYd88iGtu7aE+lGVlVwdwf/pJthxr5+gUfYtqIwfzjf/+fL3pgWQnNXUlStgNa86VZZ3PP/Av4zpMv8h9P/wk0vLzkqpCLH2nr5DtPvsQv/ryVEf3L2XTHNSF15/9kNet27CO7JT6YvVCnog6yIeC4x0U+ANm4RsPFk0bzzx+ezAXLHmbH0SbA/asMjeYfZpzFZ5b/io37DqOBkliUB6+cy+U/Xs2EwVXUHWlEZZFEMHZgf56v2wO4Pbyrz5vGY5vqqS4tdoseASOrKvjU/f/LaweOAvCNS2axdP4neHxzHRMGVzHs5u/n7BPQbdv+qYUAoXPrFSLHCdQBGXR9tuUV+ji575dNGc+qDduoP9yIlgrtZdiIYXLbJbNYv+eg256Sio5kism1NWilmDCwmu2HjntzNFoqzhxY5dUNmosmjsIQgoMtbdSUFrv3DqUxhGDL/iO0dado60rx4+fXUxSxKI5aTBhYTXtX0n3WnaS9O+W+OvOSufZympK6p03eJ4Ou9z1AIdp69AM9OLUXowPLimls7/Ku1h6v0swePwIhcldudxyilkXUshhZVcG2Q8dz/UYN4wdWuR6h4cvnz2D5c+uJmCYfHDEEpTVCw8GWNtq6c236mvISOtNpTnR2M2Fwta+Hm+Pcig+dfU8scjr2QgrR5gOQxHhESmdhCIPsdy8BzVn2MJdOHsfDX5jHuWOGsXb7Hq77+RN85fwZ3L/2FaTjhN5Sv7RrP3Mnj2F3YzOv7T/sv+2JmCafnjqeax5aw0Nf/Awv7drPA8++wqyxw7nl4o+6HWOtONDczvWzpwMumAtnns20b/4IlOaSyWN45dYvugsJ+NG69Tz48qZTxn2WhHBt9gFouvWqZ8sXfdsvDkIA4GV0BWs217FmUx2GIWi6fwm/2VrPqOpKdh074bensuftxn2HOHPIALYfOo5UGuEV90OrynCkpLayjEunjGP+A79i4pBqSouilBYVUWQZdKQdLMPgnFG1AEwfUcvk239It20zeehATnR0c/a3ludOCoF39Q3E/UmAiFomTbde9awPALglqNaBrpAOfNG5v8wAkFJztLUDyzBJxKLu2+QAf1VJgqe2NXDHZbNZv/cQfjIFzqqtYdvhRq6bPQOlNI9c/Xfurnizq8uKoUNw3cO/9pKt5qsXfoRs13ri4AHUHT7uqZULq5DHC33SCAj2D3wAhBA9u0K+ELezEgRhcEUZf9ixl5auFOMHVvG7rTv9ELjpkzO58ZdP0a84Dl43KWvhghmTWLutgX+94MPMvvenbNp3GICiiMXx/1zCgLJi+hXH2fzmEf9k+u3WnYwb1J+6w41MrB3AtkPHch6XrUeCSegUYRC8luc6FFojtMbuEQbuKusWf5EB5SXELYs3m1tJXPNNlNZM+Mb3uPniWTTc8zU6kmkm1dZw4dKfIZXkgqU/5ba5s9l4x3UorVlXv4cv//zXHGnt4KVd+1i/94APaFda8j8vrKcsHqO2sow/7t7vP9t+6Ch3//2F3LL6GQZXlDK4vJTf37jQN3TV+tf5r3WveGj0fvQBREwz1BrzOctuuHe/k0oO6w68NsoC41ZrBaRl1/IzsuC1O/+FP+zYx1ceeSIP9rw5b5VCawVkiDyGU8hOxGJYRfE325fdNBy8OgDAiURXR4Mtqx5xFfgExwLPNPCD3/+RyuJ4mD+Pr4e8fLn51JuMfKY+ABuNWDiR6Ors7z4AIhJfISDX8PQX6kVqD8VdBR58cSNX/GRlmC9fTG+KFgIlf36hsT5S1LLc6ZH4iuyYD0DXXde8nkyUXx6PRjGCF41Cux7qUOned9YIjOWvKHDjVRT6XuAT0pbCa56E3L5DlGSi/PKuu655PSgmRImv3bONdGpij1zg2dpzRiBHFCrA8vlPNwe8zbmJWAxiRdu7v3fzpOB4j26jHSm60zR7NiGht8VFz19PFtena/zbnGuaBnak6M788Z4A3LtopR1LrDbEW1zt7Rj2LpMhBHYssdq+d9HK/Ge9ql3y5Tt12rbDdcH7kCKmSSwSofOBfytoay++Dk5x6W0Ry3ILh/cpRUyTiGXhFJfe1htPr9Y5Lz/9ojn7Msdy7PMh9zr5/UJZ41VJ2W2pe7/27d74Trq9zstPv6jPm2tHpP1x530WCrFoBLu47NbM0hu+czK+Pqeu6A1LV4ruzvnZtyrvNY8whMA0DAzDQCdKVmWWLV7Qp3l9XSCzbPECp7RygREr2h6xrNCV8v+bTMMgYlkYsaLtTmnlgr4aD6d5eJmLvz/fbG9eCe77weDL0b8WGV7bO7sRsqzfArn0q6veqpzTPr0jS5ZPIpO8Uqe65huOMzwLwrsJRtbo7E9lWftFUfEqovGH7O9ev+10ZL4r5Yu55AezSaavEKgyZTsTAEw7PelU84IkI7FtAEbEqtMY7cRjv5DfXfT8u6Hv3zT9BQGdnqcHHfmdAAAAAElFTkSuQmCC
 XSBC-Maemo-Display-Name: Nelisquare
 XB-Maemo-Display-Name: Nelisquare
